# sfarx

./: CMakeLists.txt  README.txt
include/: binary.h  mz.h  sfarx.h
src/: binary.c  mz.c  sfarx.c
